crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__missing-terminal-punctuation_D400_415.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D415 First line should end with a period, question mark, or exclamation point
  --> D400_415.py:11:5
   |
10 | def f():
11 |     """Here's a line ending in a colon:"""
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |     ...
   |
help: Add closing punctuation

D415 First line should end with a period, question mark, or exclamation point
  --> D400_415.py:15:5
   |
14 | def f():
15 |     """Here's a line ending in a semi colon;"""
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
16 |     ...
   |
help: Add closing punctuation

D415 [*] First line should end with a period, question mark, or exclamation point
  --> D400_415.py:19:5
   |
18 | def f():
19 |     """Here's a line ending with a whitespace  """
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
20 |     ...
   |
help: Add closing punctuation
   |
18 | def f():
   -     """Here's a line ending with a whitespace  """
19 +     """Here's a line ending with a whitespace.  """
20 |     ...
   |
note: This is an unsafe fix and may change runtime behavior
