crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__missing-trailing-period_D400.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D400 [*] First line should end with a period
 --> D400.py:2:5
  |
1 | def f():
2 |     "Here's a line without a period"
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
3 |     ...
  |
help: Add period
  |
1 | def f():
  -     "Here's a line without a period"
2 +     "Here's a line without a period."
3 |     ...
  |
note: This is an unsafe fix and may change runtime behavior

D400 [*] First line should end with a period
 --> D400.py:7:5
  |
6 | def f():
7 |     """Here's a line without a period"""
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
8 |     ...
  |
help: Add period
  |
6 | def f():
  -     """Here's a line without a period"""
7 +     """Here's a line without a period."""
8 |     ...
  |
note: This is an unsafe fix and may change runtime behavior

D400 [*] First line should end with a period
  --> D400.py:12:5
   |
11 |   def f():
12 | /     """
13 | |     Here's a line without a period,
14 | |     but here's the next line
15 | |     """
   | |_______^
16 |       ...
   |
help: Add period
   |
13 |     Here's a line without a period,
   -     but here's the next line
14 +     but here's the next line.
15 |     """
   |
note: This is an unsafe fix and may change runtime behavior

D400 [*] First line should end with a period
  --> D400.py:20:5
   |
19 | def f():
20 |     """Here's a line without a period"""
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
21 |     ...
   |
help: Add period
   |
19 | def f():
   -     """Here's a line without a period"""
20 +     """Here's a line without a period."""
21 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

D400 [*] First line should end with a period
  --> D400.py:25:5
   |
24 |   def f():
25 | /     """
26 | |     Here's a line without a period,
27 | |     but here's the next line"""
   | |_______________________________^
28 |       ...
   |
help: Add period
   |
26 |     Here's a line without a period,
   -     but here's the next line"""
27 +     but here's the next line."""
28 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

D400 [*] First line should end with a period
  --> D400.py:32:5
   |
31 |   def f():
32 | /     """
33 | |     Here's a line without a period,
34 | |     but here's the next line with trailing space """
   | |____________________________________________________^
35 |       ...
   |
help: Add period
   |
33 |     Here's a line without a period,
   -     but here's the next line with trailing space """
34 +     but here's the next line with trailing space. """
35 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

D400 [*] First line should end with a period
  --> D400.py:39:5
   |
38 | def f():
39 |     r"Here's a line without a period"
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
40 |     ...
   |
help: Add period
   |
38 | def f():
   -     r"Here's a line without a period"
39 +     r"Here's a line without a period."
40 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

D400 [*] First line should end with a period
  --> D400.py:44:5
   |
43 | def f():
44 |     r"""Here's a line without a period"""
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
45 |     ...
   |
help: Add period
   |
43 | def f():
   -     r"""Here's a line without a period"""
44 +     r"""Here's a line without a period."""
45 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

D400 [*] First line should end with a period
  --> D400.py:49:5
   |
48 |   def f():
49 | /     r"""
50 | |     Here's a line without a period,
51 | |     but here's the next line
52 | |     """
   | |_______^
53 |       ...
   |
help: Add period
   |
50 |     Here's a line without a period,
   -     but here's the next line
51 +     but here's the next line.
52 |     """
   |
note: This is an unsafe fix and may change runtime behavior

D400 [*] First line should end with a period
  --> D400.py:57:5
   |
56 | def f():
57 |     r"""Here's a line without a period"""
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
58 |     ...
   |
help: Add period
   |
56 | def f():
   -     r"""Here's a line without a period"""
57 +     r"""Here's a line without a period."""
58 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

D400 [*] First line should end with a period
  --> D400.py:62:5
   |
61 |   def f():
62 | /     r"""
63 | |     Here's a line without a period,
64 | |     but here's the next line"""
   | |_______________________________^
65 |       ...
   |
help: Add period
   |
63 |     Here's a line without a period,
   -     but here's the next line"""
64 +     but here's the next line."""
65 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

D400 [*] First line should end with a period
  --> D400.py:69:5
   |
68 |   def f():
69 | /     r"""
70 | |     Here's a line without a period,
71 | |     but here's the next line with trailing space """
   | |____________________________________________________^
72 |       ...
   |
help: Add period
   |
70 |     Here's a line without a period,
   -     but here's the next line with trailing space """
71 +     but here's the next line with trailing space. """
72 |     ...
   |
note: This is an unsafe fix and may change runtime behavior

D400 [*] First line should end with a period
   --> D400.py:97:5
    |
 96 |   def f():
 97 | /     """
 98 | |     My example
 99 | |     ==========
100 | |
101 | |     My example explanation
102 | |     """
    | |_______^
help: Add period
   |
97 |     """
   -     My example
98 +     My example.
99 |     ==========
   |
note: This is an unsafe fix and may change runtime behavior
