crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__multi-line-summary-first-line_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D212 [*] Multi-line docstring summary should start at the first line
   --> D.py:129:5
    |
127 |   @expect('D212: Multi-line docstring summary should start at the first line')
128 |   def asdlkfasd():
129 | /     """
130 | |     Wrong.
131 | |     """
    | |_______^
    |
help: Remove whitespace after opening quotes
    |
128 | def asdlkfasd():
    -     """
    -     Wrong.
129 +     """Wrong.
130 |     """
    |

D212 [*] Multi-line docstring summary should start at the first line
   --> D.py:597:5
    |
595 |   @expect('D212: Multi-line docstring summary should start at the first line')
596 |   def one_liner():
597 | /     """
598 | |
599 | |     Wrong."""
    | |_____________^
    |
help: Remove whitespace after opening quotes
    |
596 | def one_liner():
    -     """
    -
    -     Wrong."""
597 +     """Wrong."""
598 |
    |

D212 [*] Multi-line docstring summary should start at the first line
   --> D.py:624:5
    |
622 |   @expect('D212: Multi-line docstring summary should start at the first line')
623 |   def one_liner():
624 | /     """
625 | |
626 | |     "Wrong."""
    | |______________^
    |
help: Remove whitespace after opening quotes
    |
623 | def one_liner():
    -     """
    -
    -     "Wrong."""
624 +     """"Wrong."""
625 |
    |
