crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__no-blank-line-after-section_D410.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D410 [*] Missing blank line after section ("Parameters")
 --> D410.py:4:5
  |
2 |     """Showcase function.
3 |
4 |     Parameters
  |     ^^^^^^^^^^
5 |     ----------
6 |     a : int
  |
help: Add blank line after "Parameters"
   |
9  |         _description_
10 +
11 |     Returns
   |

D410 [*] Missing blank line after section ("Parameters")
  --> D410.py:21:5
   |
19 |     """Showcase function.
20 |
21 |     Parameters
   |     ^^^^^^^^^^
22 |     ----------
23 |     Returns
   |
help: Add blank line after "Parameters"
   |
22 |     ----------
23 +
24 |     Returns
   |
