crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__no-blank-line-after-section_sections.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D410 [*] Missing blank line after section ("Returns")
  --> sections.py:78:5
   |
76 |     """Toggle the gizmo.
77 |
78 |     Returns
   |     ^^^^^^^
79 |     -------
80 |     Yields
   |
help: Add blank line after "Returns"
   |
79 |     -------
80 +
81 |     Yields
   |

D410 [*] Missing blank line after section ("Returns")
   --> sections.py:224:5
    |
222 |     returns.
223 |
224 |     Returns
    |     ^^^^^^^
225 |     ------
226 |     Many many wonderful things.
    |
help: Add blank line after "Returns"
    |
226 |     Many many wonderful things.
227 +
228 |     Raises:
    |

D410 [*] Missing blank line after section ("Keyword Args")
   --> sections.py:647:5
    |
645 |     """Recognize Returns after a Google argument-section alias.
646 |
647 |     Keyword Args:
    |     ^^^^^^^^^^^^
648 |         option: some argument
649 |     Returns:
    |
help: Add blank line after "Keyword Args"
    |
648 |         option: some argument
649 +
650 |     Returns:
    |

D410 [*] Missing blank line after section ("Args")
   --> sections.py:658:5
    |
656 |     """Recognize supported singular section aliases.
657 |
658 |     Args:
    |     ^^^^
659 |         value: some argument.
660 |     Return:
    |
help: Add blank line after "Args"
    |
659 |         value: some argument.
660 +
661 |     Return:
    |

D410 [*] Missing blank line after section ("Return")
   --> sections.py:660:5
    |
658 |     Args:
659 |         value: some argument.
660 |     Return:
    |     ^^^^^^
661 |         bool: some return value
662 |     Raises:
    |
help: Add blank line after "Return"
    |
661 |         bool: some return value
662 +
663 |     Raises:
    |
