crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__no-blank-line-before-section_sections.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D411 [*] Missing blank line before section ("Yields")
  --> sections.py:80:5
   |
78 |     Returns
79 |     -------
80 |     Yields
   |     ^^^^^^
81 |     ------
   |
help: Add blank line before "Yields"
   |
79 |     -------
80 +
81 |     Yields
   |

D411 [*] Missing blank line before section ("Returns")
   --> sections.py:134:5
    |
133 |     The function's description.
134 |     Returns
    |     ^^^^^^^
135 |     -------
136 |     A value of some sort.
    |
help: Add blank line before "Returns"
    |
133 |     The function's description.
134 +
135 |     Returns
    |

D411 [*] Missing blank line before section ("Raises")
   --> sections.py:227:5
    |
225 |     ------
226 |     Many many wonderful things.
227 |     Raises:
    |     ^^^^^^
228 |     My attention.
    |
help: Add blank line before "Raises"
    |
226 |     Many many wonderful things.
227 +
228 |     Raises:
    |

D411 [*] Missing blank line before section ("Returns")
   --> sections.py:649:5
    |
647 |     Keyword Args:
648 |         option: some argument
649 |     Returns:
    |     ^^^^^^^
650 |         bool: some return value
    |
help: Add blank line before "Returns"
    |
648 |         option: some argument
649 +
650 |     Returns:
    |

D411 [*] Missing blank line before section ("Return")
   --> sections.py:660:5
    |
658 |     Args:
659 |         value: some argument.
660 |     Return:
    |     ^^^^^^
661 |         bool: some return value
662 |     Raises:
    |
help: Add blank line before "Return"
    |
659 |         value: some argument.
660 +
661 |     Return:
    |

D411 [*] Missing blank line before section ("Raises")
   --> sections.py:662:5
    |
660 |     Return:
661 |         bool: some return value
662 |     Raises:
    |     ^^^^^^
663 |         ValueError: bad value
    |
help: Add blank line before "Raises"
    |
661 |         bool: some return value
662 +
663 |     Raises:
    |
