crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__non-capitalized-section-name_sections.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D405 [*] Section name should be properly capitalized ("returns")
  --> sections.py:19:5
   |
17 |     """Toggle the gizmo.
18 |
19 |     returns
   |     ^^^^^^^
20 |     -------
21 |     A value of some sort.
   |
help: Capitalize "returns"
   |
18 |
   -     returns
19 +     Returns
20 |     -------
   |

D405 [*] Section name should be properly capitalized ("Short summary")
   --> sections.py:218:5
    |
216 |     """Toggle the gizmo.
217 |
218 |     Short summary
    |     ^^^^^^^^^^^^^
219 |     -------------
    |
help: Capitalize "Short summary"
    |
217 |
    -     Short summary
218 +     Short Summary
219 |     -------------
    |

D405 [*] Section name should be properly capitalized ("returns")
   --> sections.py:573:5
    |
571 |         arg: Here's a note.
572 |
573 |     returns:
    |     ^^^^^^^
574 |         Here's another note.
575 |     """
    |
help: Capitalize "returns"
    |
572 |
    -     returns:
573 +     Returns:
574 |         Here's another note.
    |
